Uploaded image for project: 'Traffic Server'
  1. Traffic Server
  2. TS-4633

Fix an erroneous warning message when reading the parent.config file.

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Minor
    • Resolution: Fixed
    • None
    • 6.2.0, 7.0.0
    • Configuration
    • None

    Description

      An erroneous warning message is logged when at startup when reading the parent.config file:

      WARNING: <ParentSelection.cc:653 (Init)> [ParentSelection] disabling parent_retry on line 24 because parent_is_proxy is true

      This warning should only be logged when parent_retry is set in the parent.config and when parent_is_proxy is true.

      Attachments

        Issue Links

          Activity

            People

              jrushford John Rushford
              jrushford John Rushford
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: