TS-4633: Fix an erroneous warning message when reading the parent.config file.

(cherry picked from commit dff3d2bc99f7a4ed9c9581ac1370b10995d44490)